--- a/challenge_1/tsconfig.json
+++ b/challenge_1/tsconfig.json
@@ -52,7 +52,7 @@
 		"declarationMap": false /* Create sourcemaps for d.ts files. */,
 		"emitDeclarationOnly": false /* Only output d.ts files and not JavaScript files. */,
 		"sourceMap": false /* Create source map files for emitted JavaScript files. */,
-		"outFile": "scripts_js\\index.js" /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */,
+		// "outFile": "scripts_js\\index.js" /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */,
 		"outDir": "./scripts_js" /* Specify an output folder for all emitted files. */,
 		"removeComments": true /* Disable emitting comments. */,
 		"noEmit": false /* Disable emitting files from a compilation. */,
